--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     goToPlace(longit, latit);
 
     //sää
-    //api.openweathermap.org/data/2.5/weather?lat=60.1708236&lon=24.9425268&appid=114332134ea7ed53cb7a0e88a863eb5d
+    //api.openweathermap.org/data/2.5/weather?lat=60.1708236&lon=24.9425268&appid=
     //https://openweathermap.org/current
 
 </script>
