--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     function showWeather(longitude, latitude) {
         console.log("weather function works 1");
 
-        var url2 = "http://api.openweathermap.org/data/2.5/weather?lat=" + latitude + "&lon=" + longitude + "&appid=114332134ea7ed53cb7a0e88a863eb5d"; // 2
+        var url2 = "http://api.openweathermap.org/data/2.5/weather?lat=" + latitude + "&lon=" + longitude + "&appid="; // 2
         doRequest(url2, vectorLayer);
 
     }
